# linearity

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml  test.yml
src/: blanket.rs  filter.rs  lib.rs  prelude.rs  tests.rs
src/primitive/: cast.rs  mod.rs  op.rs
src/primitive/op/: binary.rs  unary.rs
