[package]
name = "linearity"
description = "Library providing various operations commonly found in branchless programming"
license = "AGPL-3.0"
documentation = "https://docs.rs/linearity"
authors = ["advantageous-overtake"]
version = "1.2.0"
edition = "2021"

[dependencies]
paste = "1.0.15"

[dev-dependencies]
const-random = "0.1.18"
